Cambio en sass y modificacion de html agregando una galeria en grid

--- a/css/style.css
+++ b/css/style.css
@@ -7840,24 +7840,16 @@ body {
   color: white;
   background: linear-gradient(to bottom, #323232 0%, #3F3F3F 40%, #1C1C1C 150%), linear-gradient(to top, #ffffff66 0%, #00000040 200%);
   background-blend-mode: multiply; }
-  body header {
+  body .section-bg, body .table, body fieldset, body footer {
     background: linear-gradient(to bottom, #ffffff26 0%, #00000026 100%), radial-gradient(at top center, #ffffff66 0%, #00000066 120%) #989898;
     background-blend-mode: multiply,multiply; }
   body main h1, body main .h1, body main h2, body main .h2 {
     text-shadow: 0.1em 0.1em 0.2em #ffffff66; }
   body .table {
-    background: linear-gradient(to bottom, #ffffff26 0%, #00000026 100%), radial-gradient(at top center, #ffffff66 0%, #00000066 120%) #989898;
-    background-blend-mode: multiply,multiply;
     color: white; }
-  body fieldset {
-    background: linear-gradient(to bottom, #ffffff26 0%, #00000026 100%), radial-gradient(at top center, #ffffff66 0%, #00000066 120%) #989898;
-    background-blend-mode: multiply,multiply; }
-    body fieldset .btn__style {
-      color: white;
-      background: #5f5f5f; }
-  body footer {
-    background: linear-gradient(to bottom, #ffffff26 0%, #00000026 100%), radial-gradient(at top center, #ffffff66 0%, #00000066 120%) #989898;
-    background-blend-mode: multiply,multiply; }
+  body fieldset .btn__style {
+    color: white;
+    background: #5f5f5f; }
 
 @media (min-width: 768px) {
   body header {
@@ -7871,21 +7863,27 @@ body {
       background: #5f5f5f; }
   body main .video--width {
     width: 700px; }
+  body main section .container {
+    height: 90vh; }
   body main section p {
     margin: 0 1rem; } }
 
+@media (min-width: 992px) {
+  .collage {
+    padding-top: 15rem; } }
+
 @media (min-width: 1024px) {
-  header a {
+  body header a {
     font-size: 1.2rem; }
-  main h1, main .h1 {
+  body main h1, body main .h1 {
     font-size: 2.5rem; }
-  main .intro__text {
+  body main .intro__text {
     margin: 0 5rem; }
-  main .content__text {
+  body main .content__text {
     margin: 0 5rem; }
-  main .video--width {
+  body main .video--width {
     width: 800px; }
-  main .content__image {
+  body main .content__image {
     width: 400px;
     height: 200px; } }
 
@@ -7937,6 +7935,39 @@ main .content {
   main .content__olist {
     width: 15rem;
     margin: 1rem auto; }
+
+main .container {
+  display: grid;
+  grid-template-columns: 1.1fr 0.6fr 1.3fr;
+  grid-template-rows: 1.2fr 0.8fr 0.8fr 1.2fr;
+  gap: 10px 5px;
+  height: 45vh;
+  grid-auto-flow: row;
+  grid-template-areas: "ghost ghost torn" "sil mouth torn" "sil hunt torn" "collage collage torn"; }
+
+main .collage {
+  grid-area: collage;
+  background: url("../images/ghosts.jpg") no-repeat center/cover; }
+
+main .torn {
+  grid-area: torn;
+  background: url("../images/torn-face.png") no-repeat center/cover; }
+
+main .hunt {
+  grid-area: hunt;
+  background: url("../images/ghost.jpg") no-repeat center/cover; }
+
+main .ghost {
+  grid-area: ghost;
+  background: url("../images/lady-ghost.jpg") no-repeat center/cover; }
+
+main .mouth {
+  grid-area: mouth;
+  background: url("../images/mouth-face.jpg") no-repeat center/cover; }
+
+main .sil {
+  grid-area: sil;
+  background: url("../images/silhouette.jpg") no-repeat center/cover; }
 
 main .table {
   border: 1px solid white; }
