--- a/scss/_colors.scss
+++ b/scss/_colors.scss
@@ -2,7 +2,7 @@ body {
     color: white;
     background: linear-gradient(to bottom, #323232 0%, #3F3F3F 40%, #1C1C1C 150%), linear-gradient(to top, #ffffff66 0%, #00000040 200%);
     background-blend-mode: multiply;
-    header {
+    .section-bg {
         background: linear-gradient(to bottom, #ffffff26 0%, #00000026 100%), radial-gradient(at top center, #ffffff66 0%, #00000066 120%) #989898;
         background-blend-mode: multiply,multiply;
     }
@@ -12,13 +12,11 @@ body {
         }
     }
     .table {
-        background: linear-gradient(to bottom, #ffffff26 0%, #00000026 100%), radial-gradient(at top center, #ffffff66 0%, #00000066 120%) #989898;
-        background-blend-mode: multiply,multiply;
+        @extend .section-bg;
         color: white;
     }
     fieldset {
-        background: linear-gradient(to bottom, #ffffff26 0%, #00000026 100%), radial-gradient(at top center, #ffffff66 0%, #00000066 120%) #989898;
-        background-blend-mode: multiply,multiply;
+        @extend .section-bg;
         .btn {
             &__style {
                 color: white;
@@ -27,7 +25,6 @@ body {
         }
     }
     footer {
-        background: linear-gradient(to bottom, #ffffff26 0%, #00000026 100%), radial-gradient(at top center, #ffffff66 0%, #00000066 120%) #989898;
-        background-blend-mode: multiply,multiply;
+        @extend .section-bg;
     }
 }
