--- a/scss/_query.scss
+++ b/scss/_query.scss
@@ -17,6 +17,9 @@
                 width: 700px;
             }
             section {
+                .container {
+                    height: 90vh;
+                }
                 p {
                     margin: 0 1rem;
                 }
@@ -25,30 +28,38 @@
     }
 }
 
-@media (min-width: 1024px){
-    header {
-        a {
-            font-size: 1.2rem;
-        }
+@media (min-width: 992px){
+    .collage {
+        padding-top: 15rem;
     }
-    main {
-        h1 {
-            font-size: 2.5rem;
-        }
-        .intro {
-            &__text {
-                margin: 0 5rem;
+}
+
+@media (min-width: 1024px){
+    body {
+        header {
+            a {
+                font-size: 1.2rem;
             }
         }
-        .content__text {
-            margin: 0 5rem
-        }
-        .video--width {
-            width: 800px;
-        }
-        .content__image {
-            width: 400px;
-            height: 200px;
+        main {
+            h1 {
+                font-size: 2.5rem;
+            }
+            .intro {
+                &__text {
+                    margin: 0 5rem;
+                }
+            }
+            .content__text {
+                margin: 0 5rem
+            }
+            .video--width {
+                width: 800px;
+            }
+            .content__image {
+                width: 400px;
+                height: 200px;
+            }
         }
     }
 }
