--- a/scss/_query.scss
+++ b/scss/_query.scss
@@ -17,7 +17,7 @@
                 width: 700px;
             }
             section {
-                .container {
+                .gallery {
                     height: 90vh;
                 }
                 p {
