--- a/scss/style.scss
+++ b/scss/style.scss
@@ -67,7 +67,48 @@ main {
             margin: 1rem auto;
         }
     }
-    .container {
+
+    .table {
+        border: 1px solid white;
+    }
+    form {
+        margin-bottom: 1rem;
+        fieldset {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            border: 1px solid white;
+                legend {
+                text-align: center;
+                margin: 1rem;
+            }
+            .btn {
+                &-primary {
+                    @include button-variant(#5f5f5f, white, white, #444444, white,#989898);
+                }
+            }
+        }
+    }
+}
+
+footer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 1rem;
+    border-top: 1px solid white;
+    ul {
+        display: flex;
+        flex-direction: row;
+        list-style: none;
+        li {
+            margin: 10px;
+        }
+    }
+}
+
+    .gallery {
     display: grid;
     grid-template-columns: 1.1fr 0.6fr 1.3fr; 
     grid-template-rows: 1.2fr 0.8fr 0.8fr 1.2fr;
@@ -110,44 +151,3 @@ main {
         grid-area: sil;
         background: url("../images/silhouette.jpg") no-repeat center/cover;
     }
-
-    .table {
-        border: 1px solid white;
-    }
-    form {
-        margin-bottom: 1rem;
-        fieldset {
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            border: 1px solid white;
-                legend {
-                text-align: center;
-                margin: 1rem;
-            }
-            .btn {
-                &-primary {
-                    @include button-variant(#5f5f5f, white, white, #444444, white,#989898);
-                }
-            }
-        }
-    }
-}
-
-footer {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding-top: 1rem;
-    border-top: 1px solid white;
-    ul {
-        display: flex;
-        flex-direction: row;
-        list-style: none;
-        li {
-            margin: 10px;
-        }
-    }
-}
-
