--- a/css/style.css
+++ b/css/style.css
@@ -7818,38 +7818,89 @@ textarea.form-control-lg {
   font-family: "October_Crow";
   src: url(October_Crow.ttf) format("truetype"); }
 
-body {
-  font-family: 'Courier New', Courier, monospace;
-  line-height: 1.5rem; }
-  body header a {
-    text-decoration: none;
-    letter-spacing: 0.03rem; }
-  body main h1, body main .h1 {
-    font-size: 3rem; }
-  body main .table {
-    letter-spacing: 0.1rem; }
-
 h1, .h1, h2, .h2 {
+  text-shadow: 0.1em 0.1em 0.2em #ffffff66;
   font-family: 'October_Crow';
   letter-spacing: 0.2rem; }
 
-.content__olist {
-  text-align: left; }
+h1, .h1 {
+  font-size: 3rem; }
+
+h1:hover, .h1:hover {
+  animation: heartbeat;
+  animation-duration: 2s; }
+
+h1, .h1, h2, .h2, h3, .h3 {
+  padding: 1rem; }
+
+.btn__style {
+  color: white;
+  background: #5f5f5f; }
+
+.btn-primary {
+  color: white;
+  background-color: #5f5f5f;
+  border-color: white; }
+  .btn-primary:hover {
+    color: #989898;
+    background-color: #444444;
+    border-color: white; }
+  .btn-check:focus + .btn-primary, .btn-primary:focus {
+    color: #989898;
+    background-color: #444444;
+    border-color: white;
+    box-shadow: 0 0 0 0.25rem rgba(255, 255, 255, 0.5); }
+  .btn-check:checked + .btn-primary,
+  .btn-check:active + .btn-primary, .btn-primary:active, .btn-primary.active,
+  .show > .btn-primary.dropdown-toggle {
+    color: #fff;
+    background-color: #4c4c4c;
+    border-color: #bfbfbf; }
+    .btn-check:checked + .btn-primary:focus,
+    .btn-check:active + .btn-primary:focus, .btn-primary:active:focus, .btn-primary.active:focus,
+    .show > .btn-primary.dropdown-toggle:focus {
+      box-shadow: 0 0 0 0.25rem rgba(255, 255, 255, 0.5); }
+  .btn-primary:disabled, .btn-primary.disabled {
+    color: #fff;
+    background-color: #5f5f5f;
+    border-color: white; }
+
+form {
+  margin-bottom: 1rem; }
+  form fieldset {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid white; }
+    form fieldset legend {
+      text-align: center;
+      margin: 1rem; }
 
 body {
+  font-family: 'Courier New', Courier, monospace;
+  line-height: 1.5rem;
   color: white;
   background: linear-gradient(to bottom, #323232 0%, #3F3F3F 40%, #1C1C1C 150%), linear-gradient(to top, #ffffff66 0%, #00000040 200%);
   background-blend-mode: multiply; }
-  body .section-bg, body .table, body fieldset, body footer {
+  body .section-bg, body form fieldset, form body fieldset, body footer, body .table {
     background: linear-gradient(to bottom, #ffffff26 0%, #00000026 100%), radial-gradient(at top center, #ffffff66 0%, #00000066 120%) #989898;
     background-blend-mode: multiply,multiply; }
-  body main h1, body main .h1, body main h2, body main .h2 {
-    text-shadow: 0.1em 0.1em 0.2em #ffffff66; }
-  body .table {
-    color: white; }
-  body fieldset .btn__style {
-    color: white;
-    background: #5f5f5f; }
+  body .content {
+    text-align: center; }
+    body .content__image {
+      width: 300px;
+      height: 200px;
+      margin-bottom: 1rem; }
+    body .content__text {
+      text-align: center;
+      padding: 1rem 0; }
+    body .content__ulist {
+      list-style: none; }
+    body .content__olist {
+      width: 15rem;
+      margin: 1rem auto;
+      text-align: left; }
 
 @media (min-width: 768px) {
   body header {
@@ -7867,10 +7918,6 @@ body {
     height: 90vh; }
   body main section p {
     margin: 0 1rem; } }
-
-@media (min-width: 992px) {
-  .collage {
-    padding-top: 15rem; } }
 
 @media (min-width: 1024px) {
   body header a {
@@ -7892,91 +7939,16 @@ header {
   justify-content: space-between;
   border-bottom: 1px solid white;
   padding: 0.2rem; }
-  header a {
-    padding: 5px; }
   header ul {
     list-style: none; }
     header ul li {
       text-align: center;
       margin: 0 0.2rem;
       border-radius: 0.2rem; }
-
-main h1, main .h1 {
-  padding: 1rem; }
-
-main h1:hover, main .h1:hover {
-  animation: heartbeat;
-  animation-duration: 2s; }
-
-main h2, main .h2, main h3, main .h3 {
-  padding: 1rem; }
-
-main .intro {
-  text-align: center; }
-  main .intro__text {
-    padding: 1rem; }
-
-main .video {
-  text-align: center; }
-  main .video--width {
-    width: 320px; }
-
-main .content {
-  text-align: center; }
-  main .content__image {
-    width: 300px;
-    height: 200px;
-    margin-bottom: 1rem; }
-  main .content__text {
-    text-align: center;
-    padding: 1rem 0; }
-  main .content__ulist {
-    list-style: none; }
-  main .content__olist {
-    width: 15rem;
-    margin: 1rem auto; }
-
-main .table {
-  border: 1px solid white; }
-
-main form {
-  margin-bottom: 1rem; }
-  main form fieldset {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    border: 1px solid white; }
-    main form fieldset legend {
-      text-align: center;
-      margin: 1rem; }
-    main form fieldset .btn-primary {
-      color: white;
-      background-color: #5f5f5f;
-      border-color: white; }
-      main form fieldset .btn-primary:hover {
-        color: #989898;
-        background-color: #444444;
-        border-color: white; }
-      .btn-check:focus + main form fieldset .btn-primary, main form fieldset .btn-primary:focus {
-        color: #989898;
-        background-color: #444444;
-        border-color: white;
-        box-shadow: 0 0 0 0.25rem rgba(255, 255, 255, 0.5); }
-      .btn-check:checked + main form fieldset .btn-primary,
-      .btn-check:active + main form fieldset .btn-primary, main form fieldset .btn-primary:active, main form fieldset .btn-primary.active,
-      .show > main form fieldset .btn-primary.dropdown-toggle {
-        color: #fff;
-        background-color: #4c4c4c;
-        border-color: #bfbfbf; }
-        .btn-check:checked + main form fieldset .btn-primary:focus,
-        .btn-check:active + main form fieldset .btn-primary:focus, main form fieldset .btn-primary:active:focus, main form fieldset .btn-primary.active:focus,
-        .show > main form fieldset .btn-primary.dropdown-toggle:focus {
-          box-shadow: 0 0 0 0.25rem rgba(255, 255, 255, 0.5); }
-      main form fieldset .btn-primary:disabled, main form fieldset .btn-primary.disabled {
-        color: #fff;
-        background-color: #5f5f5f;
-        border-color: white; }
+      header ul li a {
+        text-decoration: none;
+        letter-spacing: 0.03rem;
+        padding: 5px; }
 
 footer {
   display: flex;
@@ -7991,14 +7963,48 @@ footer {
     footer ul li {
       margin: 10px; }
 
+.intro {
+  text-align: center; }
+  .intro__text {
+    padding: 1rem; }
+
+.video {
+  text-align: center; }
+  .video--width {
+    width: 320px; }
+
+.table {
+  color: white;
+  letter-spacing: 0.1rem;
+  border: 1px solid white; }
+
 .gallery {
   display: grid;
-  grid-template-columns: 1.1fr 0.6fr 1.3fr;
-  grid-template-rows: 1.2fr 0.8fr 0.8fr 1.2fr;
-  gap: 10px 5px;
-  height: 45vh;
+  grid-template-columns: 0.1fr 2.8fr 0.1fr;
+  grid-template-rows: 1fr 1fr 1fr;
+  gap: 0px 0px;
+  height: 62vh;
   grid-auto-flow: row;
-  grid-template-areas: "ghost ghost torn" "sil mouth torn" "sil hunt torn" "collage collage torn"; }
+  grid-template-areas: ". torn ." ". torn ." ". torn ."; }
+
+@media (min-width: 420px) {
+  .gallery {
+    height: 90vh; } }
+
+@media (min-width: 610px) {
+  .gallery {
+    height: 110vh; } }
+
+@media (min-width: 768px) {
+  .gallery {
+    display: grid;
+    grid-template-columns: 1.1fr 0.6fr 1.3fr;
+    grid-template-rows: 1.2fr 0.8fr 0.8fr 1.2fr;
+    gap: 10px 5px;
+    height: 45vh;
+    padding: 0 1rem;
+    grid-auto-flow: row;
+    grid-template-areas: "ghost ghost torn" "sil mouth torn" "sil hunt torn" "collage collage torn"; } }
 
 .collage {
   grid-area: collage;
@@ -8023,3 +8029,9 @@ footer {
 .sil {
   grid-area: sil;
   background: url("../images/silhouette.jpg") no-repeat center/cover; }
+
+@media (min-width: 992px) {
+  .gallery {
+    padding: 0 5rem; }
+  .collage {
+    padding-top: 15rem; } }
