--- a/scss/style.scss
+++ b/scss/style.scss
@@ -2,152 +2,7 @@ $navbar-dark-color: white;
 $navbar-dark-hover-color: #989898;
 
 @import "../node_modules/bootstrap/scss/bootstrap";
-@import "reset";
-@import "fonts";
-@import "colors";
-@import "query";
-
-header {
-    display: flex;
-    justify-content: space-between;
-    border-bottom: 1px solid white;
-    padding: 0.2rem;
-    a {
-        padding: 5px;
-    }
-    ul {
-        list-style: none;
-        li {
-            text-align: center;
-            margin: 0 0.2rem;
-            border-radius: 0.2rem;
-        }
-    }
-}
-
-main {
-    h1 {
-        padding: 1rem;
-    }
-    h1:hover {
-        animation: heartbeat;
-        animation-duration: 2s;
-    }
-    h2, h3 {
-        padding: 1rem;
-    }
-    .intro {
-        text-align: center;
-        &__text {
-            padding: 1rem;
-        }
-    }
-    .video {
-        text-align: center;
-        &--width {
-            width: 320px;
-        }
-    }
-    .content {
-        text-align: center;
-        &__image {
-            width: 300px;
-            height: 200px;
-            margin-bottom: 1rem;
-        }
-        &__text {
-            text-align: center;
-            padding: 1rem 0;
-        }
-        &__ulist {
-            list-style: none;
-        }
-        &__olist {
-            width: 15rem;
-            margin: 1rem auto;
-        }
-    }
-
-    .table {
-        border: 1px solid white;
-    }
-    form {
-        margin-bottom: 1rem;
-        fieldset {
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            border: 1px solid white;
-                legend {
-                text-align: center;
-                margin: 1rem;
-            }
-            .btn {
-                &-primary {
-                    @include button-variant(#5f5f5f, white, white, #444444, white,#989898);
-                }
-            }
-        }
-    }
-}
-
-footer {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding-top: 1rem;
-    border-top: 1px solid white;
-    ul {
-        display: flex;
-        flex-direction: row;
-        list-style: none;
-        li {
-            margin: 10px;
-        }
-    }
-}
-
-    .gallery {
-    display: grid;
-    grid-template-columns: 1.1fr 0.6fr 1.3fr; 
-    grid-template-rows: 1.2fr 0.8fr 0.8fr 1.2fr;
-    gap: 10px 5px;
-    height: 45vh;
-    grid-auto-flow: row;
-    grid-template-areas:
-    "ghost ghost torn"
-    "sil mouth torn"
-    "sil hunt torn"
-    "collage collage torn";
-    }
-
-    .collage {
-        grid-area: collage;
-        background: url("../images/ghosts.jpg") no-repeat center/cover;
-    }
-
-    .torn {
-        grid-area: torn;
-        background: url("../images/torn-face.png") no-repeat center/cover;
-    }
-
-    .hunt {
-        grid-area: hunt;
-        background: url("../images/ghost.jpg") no-repeat center/cover;
-    }
-
-    .ghost {
-        grid-area: ghost;
-        background: url("../images/lady-ghost.jpg") no-repeat center/cover;
-    }
-
-    .mouth {
-        grid-area: mouth;
-        background: url("../images/mouth-face.jpg") no-repeat center/cover;
-    }
-
-    .sil {
-        grid-area: sil;
-        background: url("../images/silhouette.jpg") no-repeat center/cover;
-    }
+@import "./base/reset","./base/variables","./base/typography";
+@import "./components/buttons","./components/form";
+@import "./layout/body","./layout/header","./layout/footer";
+@import "./page/index","./page/ghosts";
