Pequeño arreglo en el header

--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -2,7 +2,7 @@ header {
     display: flex;
     justify-content: space-between;
     border-bottom: 1px solid $clr-light;
-    padding: 0.2rem;
+    padding: 0 0.5rem;
     ul {
         list-style: none;
         li {
