--- a/css/style.css
+++ b/css/style.css
@@ -7938,7 +7938,7 @@ header {
   display: flex;
   justify-content: space-between;
   border-bottom: 1px solid white;
-  padding: 0.2rem; }
+  padding: 0 0.5rem; }
   header ul {
     list-style: none; }
     header ul li {
