Arreglo en 404 y renombre de carpeta de pages

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -5,4 +5,4 @@ $navbar-dark-hover-color: #989898;
 @import "./base/reset","./base/variables","./base/typography";
 @import "./components/buttons","./components/form";
 @import "./layout/body","./layout/header","./layout/footer";
-@import "./page/index","./page/ghosts";
+@import "./pages/index","./pages/ghosts";
